--- a/state-management-tools/package.json
+++ b/state-management-tools/package.json
@@ -14,8 +14,10 @@
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
     "tailwindcss": "^3.0.12",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
@@ -23,12 +25,9 @@
   "scripts": {
     "build:tailwind": "tailwind -i src/tailwind.css -o src/tailwind.output.css",
     "watch:tailwind": "chokidar 'src/**/*.css' 'src/**/*.scss' --ignore src/tailwind.output.css -c 'npm run build:tailwind'",
-
     "start": "npm-run-all build:tailwind --parallel watch:tailwind start:react",
     "start:react": "react-scripts start",
-
     "prebuild": "run-s build:tailwind",
-    
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
